# ragcruit

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_bootstrap_candidates.py  0002_add_job_postings.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: candidates.py  jobs.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: candidate.py  job_posting.py
backend/app/schemas/: candidate.py  job_posting.py
backend/app/services/: candidate_embedding_text.py  candidate_embeddings.py  candidate_mapper.py  job_postings.py
backend/tests/: test_candidate_embedding_text.py  test_candidate_embeddings.py  test_candidates.py  test_health.py  test_jobs.py
docs/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
