[project]
name = "ragcruit-backend"
version = "0.1.0"
description = "Backend service for ragcruit."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "fastapi>=0.115,<1.0",
  "psycopg>=3.2,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn>=0.30,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
